--- a/app/views/shared/_quickquiz-sidebar.html.erb
+++ b/app/views/shared/_quickquiz-sidebar.html.erb
@@ -11,8 +11,8 @@
 	</li>
 	<% end %>
 	
-	<span>View <%= link_to "all leaderboards", quizleaderboard_path %> or the <%= link_to "daily winners", quizwinners_path %>.</span>
-	<% if signed_in? %><p>Wanna see how a specific member did on a certain day? Plug the username and date into <%= link_to "this URL", quizresults_by_member_path(current_user.username, DateTime.now.strftime("%m-%d-%Y")) %>.</p><% end %>
+	<span>View <%= link_to "all leaderboards", quizleaderboard_path(params[:id]) %> or the <%= link_to "daily winners", quizwinners_path(params[:id]) %>.</span>
+	<% if signed_in? %><p>Wanna see how a specific member did on a certain day? Plug the username and date into <%= link_to "this URL", quizresults_by_member_path(params[:id], current_user.username, DateTime.now.strftime("%m-%d-%Y")) %>.</p><% end %>
 	<div style="margin-bottom:25px"></div>	
 	
 	<% rank = 0 %>
