--- a/app/views/quizes/answer_by_member.html.erb
+++ b/app/views/quizes/answer_by_member.html.erb
@@ -6,8 +6,19 @@
 <link rel="stylesheet" href="/assets/quickquiz/answer.css" />
 <link rel="stylesheet" href="/assets/quickquiz/CodeMirror-2.2/lib/codemirror.css" />
 
+<script type="text/javascript">
+function flag(id) {
+	$.ajax({
+	  type: 'GET',
+	  url: '/quizes/flag_answer/'+id
+	});
+	document.getElementById("flag-message").innerHTML = "Thanks! It's been added to the review queue.";
+}
+</script>
+</script>
+
 <div class="editPane">
-	    <div class="hint" style="float:right">Is there a problem with this question? Tell us about it. Question: <%= @answer_id %></div>
+	    <div class="hint" id="flag-message" style="float:right">Is there a problem with this question (<%= @answer_id %>)? <span style="text-decoration: underline;" onclick="flag('<%= @answer_id %>')">Flag it</span> and we'll take a look. </div>
 	<strong>This is the "buggy" <%= @type %> code that was shown to you.</strong>
     <div id="incorrect"></div>
     <strong>This is the correct version.</strong>
