--- a/app/views/quizes/winners.html.erb
+++ b/app/views/quizes/winners.html.erb
@@ -1,40 +1,45 @@
-<div class="page-heading"><h2 class="melbourne">Daily Quick Quiz Winners</h2></div>
+<div class="page-heading"><h2 class="melbourne">Daily <%= @challenge_detail['Name'] %> Winners</h2></div>
 <div class="page two-cols-bg top-border">
 <!-- Content Wrapper -->
         <div class="challenge-content-wrapper">
-			<p><%= link_to "Back to the Quick Quiz Challenge", challenge_path(ENV['QUICK_QUIZ_CHALLENGE_ID']) %></p>
+			<p><%= link_to "Back to the Challenge", challenge_path(params[:id]) %></p>
             <!-- Widecolumn -->
             <div class="widecolumn fl dvbulletedlist">
                 <!-- Challenge Information -->
                 <div class="challenge-information">
 	
-					<% @days.each do |day| %>
+					<% if @days.size > 0 %>
 	
+						<% @days.each do |day| %>
 	
-					<h3><%= day %></h3>
-					<table class="fancytable" id="winners" style="width:100%">
-					    <thead>
-					    	<tr>
-								<th scope="col">Member</th>
-								<th scope="col">Language</th>
-					            <th scope="col">Time</th>
-								<th scope="col">Correct</th>
-					        </tr>
-					    </thead>
-					    <tbody>
-							<% @winners.each do |record|%>
-								<% if record["Quiz_Date__c"].eql?(day) %>
-							    	<tr>
-										<td style="font-size:12px" width="200"><%= link_to record["Member__r"]["Name"], member_path(record["Member__r"]["Name"]), :target => '_blank' %></td>
-										<td style="font-size:12px" width="125"><%= record["Type__c"]%></td>
-							            <td style="font-size:12px" width="150"><%= record["Display_Time__c"]%></td>
-										<td style="font-size:12px"><%= record["Number_Correct__c"]%></td>
-							        </tr>
+						<h3><%= day %></h3>
+						<table class="fancytable" id="winners" style="width:100%">
+						    <thead>
+						    	<tr>
+									<th scope="col">Member</th>
+									<th scope="col">Language</th>
+						            <th scope="col">Time</th>
+									<th scope="col">Correct</th>
+						        </tr>
+						    </thead>
+						    <tbody>
+								<% @winners.each do |record|%>
+									<% if record["Quiz_Date__c"].eql?(day) %>
+								    	<tr>
+											<td style="font-size:12px" width="200"><%= link_to record["Member__r"]["Name"], member_path(record["Member__r"]["Name"]), :target => '_blank' %></td>
+											<td style="font-size:12px" width="125"><%= record["Type__c"]%></td>
+								            <td style="font-size:12px" width="150"><%= record["Display_Time__c"]%></td>
+											<td style="font-size:12px"><%= record["Number_Correct__c"]%></td>
+								        </tr>
+									<% end %>
 								<% end %>
-							<% end %>
-					    </tbody>
-					</table>
+						    </tbody>
+						</table>
 					
+						<% end %>
+					
+					<% else %>
+						<p>No winners announced yet for this challenge.</p>
 					<% end %>
 
                 </div><br/><br/>
