--- a/app/views/quizes/results_by_member.html.erb
+++ b/app/views/quizes/results_by_member.html.erb
@@ -46,7 +46,7 @@ $(".fancyanswer").fancybox({
 						    	<tr>
 									<td></td>
 									<td style="font-size:12px"><%= record["Type__c"]%></td>
-						            <td style="font-size:12px"><%= record["Elapsed_Time_Seconds__c"]%> seconds</td>
+						            <td style="font-size:12px"><%= record["Display_Time__c"]%></td>
 									<td style="font-size:12px">
 									<% if record["Is_Correct__c"] %>
 										<img src="/assets/answer-true.png" width="40"/>
