--- a/app/views/quiz_questions/new.html.erb
+++ b/app/views/quiz_questions/new.html.erb
@@ -10,7 +10,10 @@
 			
 			<p style="padding-bottom:25px">Here is your opportunity to create quick quizzes to stump your fellow CloudSpokers.  Questions will contain one and only one issue and should be solved in one way only without adding or removing lines of code.  A good quiz question will focus on the core language not additional frameworks like Rails or JQuery.  Challenging questions will include misnamed function calls, logical errors or other easy to miss bugs.  It is ok to replace sections of code with underscores (___) and the fix will be to replace the underscore with the appropriate text.  For example, another good question contains an assert at the end of the problem statement and the solution will be to replace the code to make the assert accurate. Remember scoring is based on changing the <strong>LEAST</strong> number of characters.
 
-			<br/><br/><strong>We will pay $100 for each set of 10 approved questions.</strong> Each quiz question will be reviewed and approved prior to being entered into the quick quiz format. You will receive an email if your question is approved or rejected. Please ensure that you can reproduce your errors before submitting your "buggy" code for review.
+			<br/><br/><strong>We will pay $100 for each set of 10 approved questions.</strong> Each quiz question will be reviewed and approved prior to being entered into the quick quiz format. You will receive an email if your question is approved or rejected. 
+			
+			<br/><br/>Please ensure that you can reproduce your errors before submitting your "buggy" question for review. <strong>The Correct 
+				Answer box below <u>must</u> contain the exact answer that the person will enter to answer the question correctly.</strong>
 
 			<br/><br/>Please review the <%= link_to "FAQs", faq_path %> for additional information on payments.  <!--Additional information is found in this BLOG POST--></p>
 			
