added chrome extension

--- a/app/views/shared/_share.html.erb
+++ b/app/views/shared/_share.html.erb
@@ -13,3 +13,8 @@
 	<!-- AddThis Button END -->
 	<div class="cl">&nbsp;</div>
 </li>
+
+<div style="margin-top:25px">
+<a href="https://chrome.google.com/webstore/detail/gdlkedihjlddoaplefphpmiibpnnpeap" target="_blank"><%= image_tag "chrome-extension.png", :width => "150px" %></a>
+<p>Install the <%= link_to "CloudSpokes Chrome Extension", "https://chrome.google.com/webstore/detail/gdlkedihjlddoaplefphpmiibpnnpeap", :target => :blank %> for quick and easy access to the latest CloudSpokes challenges, your payments, leaderboards and more!</p>
+</div>
