change by sal for typo

--- a/app/views/content/badges.html.erb
+++ b/app/views/content/badges.html.erb
@@ -276,7 +276,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>App Engine Adventurer</strong> - Awarded for winning ten contests involving or using Appengine.</p>
+                            <strong>App Engine Adventurer</strong> - Awarded for winning ten contests involving or using App Engine.</p>
                     </div>
                     <div class="cl">
                     </div>
@@ -285,7 +285,7 @@
                     </div>
                     <div class="divBadgePopupText">
                         <p>
-                            <strong>App Engine Ninja</strong> - Awarded for winning twenty contests involving or using Appengine.</p>
+                            <strong>App Engine Ninja</strong> - Awarded for winning twenty contests involving or using App Engine.</p>
                     </div>
 <div class="cl">
                     </div>
@@ -295,7 +295,7 @@
                     <div class="divBadgePopupText">
                         <p>
                             <strong>App Engine Samurai</strong> - You are a beast!
-                            Awarded for winning fifty contests involving or using Appengine.</p>
+                            Awarded for winning fifty contests involving or using App Engine.</p>
                     </div>
                     <div class="cl">
                     </div>
