--- a/app/views/challenges/results.html.erb
+++ b/app/views/challenges/results.html.erb
@@ -10,6 +10,12 @@
 				<% if @participants.size == 0 %>
 					<div style="text-align: center; padding:50px"><b>No winners found for this challenge.</b></div>
 				<% else %>
+				
+				<p>Once every judge fills out a scorecard for each participant the scoring engine runs which calculates a winner. Participants must meet a scoring threshold of 75% to be eligible for prize money. In the case of a tie score, the participant that submitted their entry first wins. You can click on the "Scorecard" link to view the 
+					scores and comments from the individual judge.</p>
+				
+				<p>If you submitted for this challenge then you are also able to view everyone else's submission after the results are final. Feel free to download their code, watch their videos and read their documentation to learn from their submission. </p>
+				
 					<% if @challenge_detail["Challenge_Type__c"].eql?('Code') %>
 					
 						<table  id="submissions-current" style="width:100%">
@@ -19,6 +25,7 @@
 						            <th scope="col">Place</th>
 									<th scope="col">Prize</th>
 									<th scope="col">Score</th>
+									<th scope="col">Submitted</th>
 									<th scope="col">View</th>
 						        </tr>
 						    </thead>
@@ -29,6 +36,7 @@
 									<td><% if participant['Place__c'].to_i > 0 %><%= participant['Place__c'].to_i.ordinalize %><% end %></td>
 									<td><% if participant['Money_Awarded__c'] > 0 %><%= number_to_currency(participant['Money_Awarded__c'], :precision => 0) %><% else %><%= participant['Prize_Awarded__c'] %><% end %></td>
 									<td><%= participant['Score__c']%></td>
+									<td><%= Time.parse(participant['Submitted_Date__c']).strftime("%b. %d at %I:%M %p")%></td>
 									<td><% if @has_submission %><%= link_to 'Submissions', participant_submissions_path(params[:id], participant['Id']) %><% end %></td>
 						        </tr>
 								<% if participant['Scorecard__r'] %>
@@ -37,6 +45,7 @@
 										<td><div style="padding-left:25px"><%= link_to scorecard['Reviewer__r']['Name'], member_path(scorecard['Reviewer__r']['Name'],), :target => '_blank' %></div></td>
 										<td colspan="2"></td>
 										<td><%= scorecard['Final_Score__c'] %></td>
+										<td></td>
 										<td><%= link_to 'Scorecard', participant_scorecard_path(params[:id], participant['Id'], scorecard['Reviewer__r']['Name'], participant['Member__r']['Name']) %></td>								
 									</tr>
 									<% end %>
