changed images to ssl

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -71,11 +71,11 @@ nav ul
     a
       +hide-text
       display: block
-      background: url(http://cloudspokes.s3.amazonaws.com/CloudSpokes.png) no-repeat top left
+      background: url(https://cloudspokes.s3.amazonaws.com/CloudSpokes.png) no-repeat top left
       width: 125px
       height: 97px
   #menu
-    background: url(http://cloudspokes.s3.amazonaws.com/CloudSpokes2.png) no-repeat 5px 0px
+    background: url(https://cloudspokes.s3.amazonaws.com/CloudSpokes2.png) no-repeat 5px 0px
     padding-top: 42px
     margin-top: 20px
     float: left
