--- a/app/views/quiz_questions/index.html.erb
+++ b/app/views/quiz_questions/index.html.erb
@@ -10,7 +10,9 @@
 			
 			<p style="padding-bottom:25px">Members are creating quick quiz questions to stump their fellow CloudSpokers. To ensure quality of these 
 				questions you can review them for accuracy before being placed in the pool of available questions. <strong>We will pay $50 for each set of 
-				10 reviewed questions regardless of whether you approve or reject the question.</strong> Please review the <%= link_to "FAQs", faq_path %> for additional information on payments.</p>
+				10 reviewed questions regardless of whether you approve or reject the question.</strong> </p>
+				
+			<p>Please review the <%= link_to "FAQs", faq_path %> for additional information on payments. <%= link_to "Click here", questions_reviewed_path %> to view the questions that you have reviewed and their payment status.</p>
 			
 			<% if @results['records'] %>
 			<table class="fancytable" id="answers" style="width:100%">
