required login for quiz questions

--- a/app/views/challenges/all_submissions.html.erb
+++ b/app/views/challenges/all_submissions.html.erb
@@ -1,7 +1,8 @@
 <div class="page one-cols-bg">
   <!-- Widecolumn -->
   <div>
-				<span style="font-size:Small;font-weight:bold;"></span>
+	<span style="font-size:Small;font-weight:bold;"></span>
+	<p><%= link_to "Back to Challenge Details", challenge_path %></p>
       <div class="challenge-information">
           <h3>All Submission Resources</h3>
 
