--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,12 @@
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
   <script type="text/javascript" src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+  <script type="text/javascript" src="rotatingNotifications.js"></script>
   <link rel="stylesheet" href="/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
 
   <script type="text/javascript">
   $(document).ready(function(){
+    $('#wrapper').rotatingNotifications({changeInterval : 5000});	
 	$(".fancy").fancybox({
 		 'width' : 650,
 		 'height' : 400,
