added page caching and flushing for notifications

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -4,6 +4,8 @@
 
 <div class="page-padding">
 	
+	<p><a href="/admin/flush_notifications">Flush notifications</a> - Flush the cache of notification JSON records.</p>
+	
 	<p><a href="/admin/blogfodder/0">Blog fodder</a> - Headstart for writing blog entries for a completed challenge.</p>
 	
 	<p><a href="/admin/delete_all_users">Delete all users</a> - This will delete all users from the local PG database which will essentially log everyone off of the site and force them to relogin.</p>
