--- a/app/views/layouts/blank.html.erb
+++ b/app/views/layouts/blank.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>CloudSpokes</title>
-  <link href='http://fonts.googleapis.com/css?family=Marvel:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Marvel:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <link href="/assets/blank.css" media="screen" rel="stylesheet" type="text/css" />
   <%= csrf_meta_tags %>
 </head>
