--- a/app/views/layouts/hackathon.html.erb
+++ b/app/views/layouts/hackathon.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>CloudSpokes</title>
-  <link href='http://fonts.googleapis.com/css?family=Marvel:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Marvel:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
